chore(seo): configurar index.html, web manifest y robots.txt

--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>danielospid-shop</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<html lang="es">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tienda Online de Daniel Ospid</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+  rel="stylesheet">
+  <link rel="stylesheet" href="./src/style.css">
+  
+  <!-- Primary Meta Tags -->
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+  <link rel="canonical" href="https://shop.danielospid.com">
+  <meta name="author" content="Daniel Ospid">
+  <meta name="title" content="Tienda Online de Daniel Ospid">
+  <meta name="description" content="Tienda online de Daniel Ospid, con productos de alta calidad y precios competitivos.">
+  
+  <meta name="theme-color" content="#0a0a0a" />
+  <link rel="apple-touch-icon" href="/images/favicon.ico" />
+  <link rel="manifest" href="/manifest.json" />
+</head>
+
+<body>
+  <div id="root">
+  </div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
