--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
-  rel="stylesheet">
+    rel="stylesheet">
   <link rel="stylesheet" href="./src/style.css">
-  
+
   <!-- Primary Meta Tags -->
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+  <link rel="icon" href="/images/isotipo-black.png" media="(prefers-color-scheme: light)">
+  <link rel="icon" href="/images/isotipo-white.png" media="(prefers-color-scheme: dark)">
   <link rel="canonical" href="https://shop.danielospid.com">
   <meta name="author" content="Daniel Ospid">
   <meta name="title" content="Tienda Online de Daniel Ospid">
-  <meta name="description" content="Tienda online de Daniel Ospid, con productos de alta calidad y precios competitivos.">
-  
+  <meta name="description"
+    content="Tienda online de Daniel Ospid, con productos de alta calidad y precios competitivos.">
+
   <meta name="theme-color" content="#0a0a0a" />
   <link rel="apple-touch-icon" href="/images/favicon.ico" />
   <link rel="manifest" href="/manifest.json" />
